# hackathon-2-phase3-Todo-Kudo

./: .gitignore  CLAUDE.md
.claude/agents/: auth-integration-agent.md  backend-dev-agent.md  database-dev-agent.md  frontend-dev-agent.md  qa-spec-validator.md  refactor-cleancode-agent.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .env.example  CLAUDE.md  alembic.ini  clear_jwks.sql  clear_jwks_cache.py  package-lock.json  pyproject.toml  requirements.txt  run_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 6cfdd4125f8d_create_tasks_table.py  7a3b5c8d9e1f_truncate_demo_tasks.py  8b4c6d7e0f2a_update_tasks_user_id_for_auth.py  9c5d7e8f1g3b_add_jwks_table_for_better_auth_jwt.py  df1e7b8409fc_add_task_attributes_priority_due_date_.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: tasks.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: task.py
backend/app/utils/: constants.py
frontend/: CLAUDE.md  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: CreateTaskForm.tsx  EmptyState.tsx  TaskCard.tsx  TaskList.tsx  TaskToolbar.tsx
frontend/hooks/: useAuth.ts  useCreateTask.ts  useDebounced.ts  useDeleteTask.ts  useTaskFilters.ts  useTasks.ts  useUpdateTask.ts
frontend/schemas/: task.ts
frontend/types/: filters.ts  task.ts
specs/001-project-overview/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-task-crud/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+68 files in other folders)
